2006-01-18  Sami Wagiaalla  <swagiaal@redhat.com>

	* filters/FilterPoint.java (removeFilter): Added number of added
	actions to the name.
	* actions/ActionPoint.java (ActionPoint): Ditto.
	* DetailedObserverTreeView.java (getSelectedObserver): Added code
	to populate the tree with an observers action and filters.

2006-01-17  Sami Wagiaalla  <swagiaal@redhat.com>

	* DetailedObserverTreeView.java (addObserverRoot): Embelishing view:
	now showes filterPoints, and actionPoints of an observer.

2006-01-11  Andrew Cagney  <cagney@redhat.com>

	* actions/Resume.java: Replace call to Proc
	.requestAttachedContinue with throw.

2006-01-05  Andrew Cagney  <cagney@redhat.com>

	* TrayIcon.java: Import org.gnu.gtk.frysk.EggTrayIcon.
	* EggTrayIcon.java: Delete.  Moved to frysk-gtk/.

2005-12-19  Adam Jocksch  <ajocksch@redhat.com>

	* TrayIcon.java (TrayIcon): Only constructor now takes a name and a
	boolean, which reflects whether the icons should be flashing.
	(setContents): Refactored to only take an Icon an no longer assumes
	that the tray icon was empty to begin with.
	(isActive): Added.
	(setActive): Added.

2005-12-14  Sami Wagiaalla  <swagiaal@redhat.com>

	* StatusWidget.java (TimelineAction): Removed all references to
	logTextView.

2005-12-13  Andrew Cagney  <cagney@redhat.com>

	* ProcDataModel.java: Update, Proc .observableTaskAdded renamed
	to .observableTaskAddedXXX.

2005-12-13  Sami Wagiaalla  <swagiaal@redhat.com>

	* StatusWidget.java: Integrated stripchart widget.

2005-12-13  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskSyscallObserver.java: Added setInfo call.
	* observers/TaskForkedObserver.java: ditto.
	* observers/TaskExecObserver.java: ditto.
	* observers/TaskCloneObserver.java: ditto.
	* observers/TaskTerminatingObserver.java (TaskTerminatingObserver): 
	* observers/ObserverRoot.java: Added LogAction by default. Added
	setInfo function.
	* actions/Action.java: Removed abstract execute() function.